more exports config