@@ -1,2 +1,3 @@
 --add-exports=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED
 --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
+--add-exports=java.base/java.util=ALL-UNNAMED
